# Vibe_Media_Player

./: README.md
Vibe/: AboutDialog.qml  Actions.qml  AppController.cpp  AppController.h  BottomControlBar.qml  CMakeLists.txt  Content.qml  Controller.qml  Dialog.qml  Dialogs.qml  DisplayArea.qml  Main.qml  MediaProbeService.cpp  MediaProbeService.h  PlaySlider.qml  PlayerController.cpp  PlayerController.h  PlayerController.qml  TopMenuBar.qml  TopTitleBar.qml  VibePlayer.qml  VolumeSlider.qml  Window.qml  appVibe  main.cpp  musicplayer.js
doc/: projectLarkDoc.md  terms.md  比较简单的工作量分配.md  读我(在看文档之前).md
doc/api/: backend.api(deprecated).md  backend.api.md
doc/architectrue/: ARCHITECTURE.md
doc/data.flow.diagram/: dataflow.1.txt
doc/requirement/: changing_requirement.md
doc/ui/: idea.md
icons/: readme.md
